feat(ci): change custom golangci-lint to github action one

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -40,6 +40,9 @@ linters:
     - usetesting
     - whitespace
   settings:
+    exhaustive:
+      default-signifies-exhaustive: true
+      explicit-exhaustive-switch: true
     depguard:
       rules:
         logblock:
