fix(agent): add backoff to reduce reconnect load (#1056)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,8 @@
     "gopls": {
         "formatting.gofumpt": true
     },
+    "go.lintTool": "golangci-lint",
+    "go.lintFlags": ["--fast"],
     "[yaml]": {
         "editor.defaultFormatter": "bluebrown.yamlfmt"
     },
