feat(ci): change custom golangci-lint to github action one (#1055)

--- a/.github/workflows/product_builder.yaml
+++ b/.github/workflows/product_builder.yaml
@@ -25,6 +25,7 @@ env:
   CRUX_UI_WORKING_DIRECTORY: web/crux-ui
   KRATOS_WORKING_DIRECTORY: web/kratos
   GOLANG_WORKING_DIRECTORY: golang
+  GOLANGCI_LINT_VERSION: v2.0.2
 concurrency:
   group: ${{ github.workflow }}-${{ github.sha }}
   cancel-in-progress: true
@@ -118,27 +119,16 @@ jobs:
   go_lint:
     runs-on: ubuntu-22.04
     needs: gather_changes
-    container:
-      image: ghcr.io/dyrector-io/dyrectorio/builder-images/golang:4
-    defaults:
-      run:
-        working-directory: ${{ env.GOLANG_WORKING_DIRECTORY }}
     if: ${{ (needs.gather_changes.outputs.agents == 'true') || (github.ref_type == 'tag') || (needs.gather_changes.outputs.release == 'true') }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Setup Golang caches
-        uses: actions/cache/restore@v3
-        with:
-          path: /go
-          key: ${{ runner.os }}-golang-${{ hashFiles('go.sum') }}
-      - name: Load go mod
-        run: go mod tidy
-      # fixes: fatal: unsafe repository
-      - name: Adding workspace
-        run: git config --global --add safe.directory "$GITHUB_WORKSPACE"
       - name: Run golangci-lint
-        run: make lint
+        uses: golangci/golangci-lint-action@v7
+        with:
+          version: ${{ env.GOLANGCI_LINT_VERSION }}
+          working-directory: ${{ github.workspace }}
+          args: --path-prefix=golang
   go_security:
     runs-on: ubuntu-22.04
     needs: gather_changes
