feat: full width container config layout

--- a/web/crux/.env.example
+++ b/web/crux/.env.example
@@ -63,6 +63,9 @@ DISABLE_RECAPTCHA=true
 # Required only when ReCAPTCHA is enabled
 RECAPTCHA_SECRET_KEY=<recaptcha_secret_key>
 
+# Registry label fetching config
+DISABLE_REGISTRY_LABEL_FETCHING=false
+
 # Determines the maximum quantity of lines returned from a container
 MAX_CONTAINER_LOG_TAKE=1000
 
