feat: add env variable to disable team creation

--- a/web/crux-ui/.env.example
+++ b/web/crux-ui/.env.example
@@ -12,6 +12,9 @@ LOG_LEVEL=trace
 # # Google ReCAPTCHA config
 DISABLE_RECAPTCHA=true
 
+# Disable team creation
+DISABLE_TEAM_CREATION=false
+
 # Required only when ReCAPTCHA is enabled
 RECAPTCHA_SITE_KEY=<public_recaptcha_site_key>
 RECAPTCHA_SECRET_KEY=<recaptcha_secret_key>
