--- a/web/crux/.env.example
+++ b/web/crux/.env.example
@@ -66,6 +66,9 @@ RECAPTCHA_SECRET_KEY=<recaptcha_secret_key>
 # Registry label fetching config
 DISABLE_REGISTRY_LABEL_FETCHING=false
 
+# Disable creating new teams
+DISABLE_TEAM_CREATION=false
+
 # Determines the maximum quantity of lines returned from a container
 MAX_CONTAINER_LOG_TAKE=1000
 
